# VWatch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: app.rs  config.rs  fonts.rs  main.rs  model.rs  palworld.rs  ssh.rs  worker.rs
