[package]
name = "VWatch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-ssh2-tokio = "0.13.0"
chrono = "0.4.45"
directories = "6.0.0"
eframe = "0.32"
egui = "0.32"
egui_plot = "0.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync"] }
toml = "1.1.2"
